ADAPT-1345: Accordion tweaks and fixes (#124)
* Allow heading level selection of accordion main heading; font size tweaks; add +/- sign on expand/collapse button as pseudo elements so SR doesn't read it out
* Fix the overlapping accordion item title with the icon on the right
* Use Heading component for acc item
* Set item title back to bold instead of semibold

--- a/src/scss/components/composite/_accordion.scss
+++ b/src/scss/components/composite/_accordion.scss
@@ -3,17 +3,32 @@
 // Accordion styles
 
 .ood-accordion {
+  &__heading,
+  &__title {
+    letter-spacing: 0;
+  }
+
   &__heading {
-    @include margin(-0.16em null null);
-    @include modular-typography(3);
+    @include margin(-0.16em null 1.4em);
+    @include modular-typography(2);
+
+    @include grid-media('md') {
+      font-size: 3.2rem;
+    }
+
+    @include grid-media('lg') {
+      @include modular-typography(3);
+    }
   }
 
   &__title {
     @include modular-typography(1);
-    letter-spacing: 0;
 
     > .ood-accordion__button {
+      @include padding(1.5rem 4rem 1.5rem 1.5rem);
+
       &::after {
+        right: 1.5rem;
         color: $su-color-black;
       }
     }
@@ -24,6 +39,32 @@
 
     ul {
       list-style-type: disc;
+    }
+  }
+}
+
+.su-accordion {
+  &__expand-all,
+  &__collapse-all {
+    @include grid-media-max('sm') {
+      font-size: 1.6rem;
+    }
+
+    &::after {
+      @include margin(null null null 0.3em);
+      display: inline-block;
+    }
+  }
+
+  &__expand-all {
+    &::after {
+      content: "\002B";
+    }
+  }
+
+  &__collapse-all {
+    &::after {
+      content: "\2212";
     }
   }
 }
